[package]
name = "cargo-verify"
version = "0.2.3"
authors = ["Bob Gebert <bobgebert7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verified = { path = "../verified", version = "0.2.3" }
combine = { version = "4.2.1", features = [ "regex" ] }
regex = "1.3.9"

[dev-dependencies]
textwrap = "0.11.0"
