[package]
name = "cargo-verify"
description = "Prettier error messages for the verified crate."
version = "0.2.3"
authors = ["Bob Gebert <bobgebert7@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bobbygebert/verified/"
keywords = ["verify", "verifiable", "types", "type-level", "dependent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verified = { path = "../verified", version = "0.2.3" }
combine = { version = "4.2.1", features = [ "regex" ] }
regex = "1.3.9"

[dev-dependencies]
textwrap = "0.11.0"
