[package]
name = "verified"
version = "0.1.0"
authors = ["Bob Gebert <bobgebert7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verify_macro = { path = "../verify_macro" }

[dev-dependencies]
trybuild = "1.0.28"
tempfile = "3.1.0"
textwrap = "0.11.0"
