[package]
name = "verified"
description = "A library of types to facilitate the development of verifiable rust."
version = "0.2.3"
authors = ["Bob Gebert <bobgebert7@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bobbygebert/verified/"
readme = "README.md"
keywords = ["verify", "verifiable", "types", "type-level", "dependent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verify_macro = { path = "../verify_macro", version = "0.2.3" }
typenum = "1.12.0"

[dev-dependencies]
trybuild = "1.0.28"
tempfile = "3.1.0"
textwrap = "0.11.0"
