[package]
name = "verify_macro"
description = "An attribute that automatically instruments code with logical type bounds."
version = "0.2.0"
authors = ["Bob Gebert <bobgebert7@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bobbygebert/verified/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.3"
syn = { version = "1.0.3", features = [
    "derive",
    "proc-macro",
    "clone-impls",
    "default",
    "printing",
    "visit",
    "parsing",
    "full",
    "extra-traits",
] }

